--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>    
     </div>
-    <p style="text-align: center; font-weight: bold;">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+    <p style="text-align: center; font-weight: bold;">© 2022 – Todos los derechos reservados. Este sitio no forma parte de Google, Inc. ni de Google.com, ni está patrocinado o avalado por Google. YouTube es una marca comercial de Google, Inc. Descargo de responsabilidad: Toda la información proporcionada es solo para uso educativo. Siempre se recomienda consultar adecuadamente antes de comenzar cualquier tipo de programa para la salud y el bienestar. El contenido del sitio web se basa en la opinión del autor y se proporciona únicamente "tal cual" y "según disponibilidad". Usted debe hacer su propia investigación y confirmar la información con otras fuentes cuando busque información sobre temas de salud y siempre revisar la información cuidadosamente con su proveedor de atención médica profesional antes de usar cualquiera de los protocolos presentados en este sitio web y/o en el producto vendido aquí. El autor no se dedica a prestar servicios o consejos médicos o profesionales similares a través de este sitio web, y la información proporcionada no pretende sustituir los consejos médicos ofrecidos por un médico u otro proveedor de atención sanitaria autorizado.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
 </body>
