--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <a href="https://api.whatsapp.com/send?phone=5567991526695&text=Ol%C3%A1%20Gabriela,%20vim%20atrav%C3%A9s%20do%20site%20pode%20me%20dizer%20como%20funciona%20os%20produtos%20naturais?"><img class="img-fluid" src="thumb IMG ps-adv.gif"></a>
+            <a href="https://api.whatsapp.com/send?phone=556796547038&text=Ol%C3%A1%20tudo%20bem?%20Vim%20atrav%C3%A9s%20do%20an%C3%BAncio,%20pode%20me%20dizer%20como%20funciona%20o%20Guria%20Shape?"><img class="img-fluid" src="thumb IMG ps-adv.gif"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://api.whatsapp.com/send?phone=5567991526695&text=Ol%C3%A1%20Gabriela,%20vim%20atrav%C3%A9s%20do%20site%20pode%20me%20dizer%20como%20funciona%20os%20produtos%20naturais?">QUERO TIRAR MINHAS DÚVIDAS!</a>
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://api.whatsapp.com/send?phone=556796547038&text=Ol%C3%A1%20tudo%20bem?%20Vim%20atrav%C3%A9s%20do%20an%C3%BAncio,%20pode%20me%20dizer%20como%20funciona%20o%20Guria%20Shape?">QUERO TIRAR MINHAS DÚVIDAS!</a>
           </div>
         </div>
       </div>
